--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ env:
   - DJANGO_VERSION=">=1.5.0,<1.6.0"
   - DJANGO_VERSION=">=1.6.0,<1.7.0"
   - DJANGO_VERSION=">=1.7.0,<1.8.0"
+  - DJANGO_VERSION=">=1.8.0,<1.9.0"
+  - DJANGO_VERSION=">=1.9.0,<1.10.0"
 matrix:
   exclude:
     - python: "3.2"
